--- a/mseg-carpool/mseg-carpool.client/src/views/Rides/RideRow.css
+++ b/mseg-carpool/mseg-carpool.client/src/views/Rides/RideRow.css
@@ -13,3 +13,14 @@ th, td {
 th {
     background-color: #f2f2f2;
 }
+
+button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+    button:focus {
+        outline: none;
+    }
