--- a/mseg-carpool/mseg-carpool.client/src/views/CreateRide/CreateRideForm.css
+++ b/mseg-carpool/mseg-carpool.client/src/views/CreateRide/CreateRideForm.css
@@ -1,5 +1,5 @@
 /* General styling */
-body {
+.body-create {
     font-family: 'Arial', sans-serif; /* Ensure you add the required font */
     background-color: #F4F4F4;
     color: #333;
