--- a/mseg-carpool/mseg-carpool.client/src/views/Rides/Rides.css
+++ b/mseg-carpool/mseg-carpool.client/src/views/Rides/Rides.css
@@ -15,5 +15,6 @@
     font-weight: bold;
     background-color: white;
     border: 1px solid white;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    cursor: pointer; /* Add this line to change the cursor shape */
 }
