--- a/mseg-carpool/mseg-carpool.client/src/views/CreateRide/CreateRideForm.css
+++ b/mseg-carpool/mseg-carpool.client/src/views/CreateRide/CreateRideForm.css
@@ -12,14 +12,14 @@ html, body {
 }
 
 /* Ensure the container takes up most of the available space */
-.container {
+.container-create {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     width: 90%; /* Adjusted to leave some margin */
     max-width: 1200px;
     padding: 20px;
-    height: 50vh; /* Ensure the container takes full height */
+    height: 100vh; /* Ensure the container takes full height */
 }
 
 /* Ensure the form container takes up a fixed width */
@@ -33,6 +33,7 @@ html, body {
 .map-container {
     flex: 2; /* Adjusted to control the width, decreasing to shrink map placeholder */
     height: 100%;
+    width: 100%;
 }
 
 .form {
@@ -92,6 +93,7 @@ html, body {
 .map-placeholder {
     background-color: #eaeaea;
     height: 100%;
+    width: 100%;
     border-radius: 8px;
     display: flex;
     align-items: center;
