--- a/mseg-carpool/mseg-carpool.client/src/views/Rides/Rides.css
+++ b/mseg-carpool/mseg-carpool.client/src/views/Rides/Rides.css
@@ -9,12 +9,16 @@
 }
 
 .button {
-    padding: 10px 20px;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    background-color: white;
-    border: 1px solid white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    cursor: pointer; /* Add this line to change the cursor shape */
+    background-color: #007bff; /* Blue background */
+    color: white; /* White text */
+    border: none; /* No border */
+    padding: 10px 20px; /* Padding around the text */
+    text-align: center; /* Center the text */
+    text-decoration: none; /* No underline */
+    display: inline-block; /* Align items inline */
+    font-size: 16px; /* Text size */
+    margin: 4px 2px; /* Margin around the button */
+    transition: background-color 0.3s, transform 0.2s; /* Smooth transition for background color and transform */
+    cursor: pointer; /* Pointer cursor on hover */
+    border-radius: 5px; /* Rounded corners */
 }
