--- a/mseg-carpool/mseg-carpool.client/src/views/Rides/Rides.css
+++ b/mseg-carpool/mseg-carpool.client/src/views/Rides/Rides.css
@@ -1,14 +1,48 @@
-
-
-
+/* Existing CSS */
 .rideText {
     margin-bottom: 20px;
 }
 
-/* Rides.css */
 .highlight {
     background: #ffcc00 !important;
     color: white !important;
     border-radius: 100%;
 }
 
+/* CSS for Sliding Panel */
+html,
+body,
+#root {
+    height: 100%;
+    margin: 0px;
+}
+
+.example-container {
+    height: 100%;
+    background-color: rgb(185, 209, 253);
+}
+
+.panel-container {
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+button {
+    margin: 2px;
+}
+
+.form-container {
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.input-container {
+    padding: 10px;
+}
