--- a/mseg-carpool/mseg-carpool.client/src/components/RidesComp/RideRow.css
+++ b/mseg-carpool/mseg-carpool.client/src/components/RidesComp/RideRow.css
@@ -14,6 +14,15 @@ th, td {
 th {
     background-color: #f2f2f2;
 }
+.crown-icon {
+    margin-left: 5px; /* Adjust the spacing as needed */
+    color: gold; /* Adjust the color as needed */
+}
+
+.driver-name {
+    display: flex;
+    align-items: center;
+}
 
 /* Button styling */
 .button-class {
@@ -65,12 +74,17 @@ th {
     border-radius: 10px;
 }
 
+
 .status {
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 10px;
+    display: inline-flex; /* Use inline-flex to allow for flex properties */
+    justify-content: center; /* Center the text horizontally */
+    align-items: center; /* Center the text vertically */
+    padding: 5px 15px;
+    border-radius: 20px;
     font-weight: bold;
     text-transform: uppercase;
+    min-width: 120px; /* Ensure a minimum width to balance the appearance */
+    text-align: center; /* Center text within the element */
 }
 
     .status.pending {
@@ -82,6 +96,12 @@ th {
         background-color: #7FBA00;
         color: white;
     }
+
+.info-icon {
+    margin-left: 10px; /* Space between the status and the info icon */
+    color: blue; /* Ensure the color of the info icon is blue */
+}
+
 
 /* Editing input box styling */
 input[type="text"].editing {
