--- a/mseg-carpool/mseg-carpool.client/src/index.css
+++ b/mseg-carpool/mseg-carpool.client/src/index.css
@@ -1,12 +1,4 @@
-html,
-body,
-#root {
-  margin: 0;
-  height: 100%;
-  font-family: "Segoe UI", SegoeUI, "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-}
+@tailwind base;
+  @tailwind components;
+  @tailwind utilities;
+  
