--- a/mseg-carpool/mseg-carpool.client/src/App.css
+++ b/mseg-carpool/mseg-carpool.client/src/App.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
-  background-image: url('assets/bg.png'); /* Update this path */
+  min-height: 100vh;
+  background-image: url('assets/bg.png');
   background-size: cover; /* Cover the entire page */
   background-position: center; 
   position: relative; 
@@ -12,11 +12,11 @@
 .App::before {
   content: ''; /* Required for pseudo-elements */
   position: absolute;
-  top: 3.5rem;
+  top: 3.4rem;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(162, 184, 243, 0.7); /* Blue overlay with 50% opacity */
+  background: rgba(162, 184, 243, 0.4); /* Blue overlay with 50% opacity */
   z-index: 1; 
 }
 
