--- a/mseg-carpool/mseg-carpool.client/src/components/RidesComp/RideRow.css
+++ b/mseg-carpool/mseg-carpool.client/src/components/RidesComp/RideRow.css
@@ -9,12 +9,12 @@ th, td {
     border: 1px solid #cccccc;
     padding: 8px;
     text-align: left;
-    background-color: #e0e0e0;
+    background-color: #f2f2f2;
 }
 
 
-th {
-    background-color: #f2f2f2;
+td {
+    background-color: #e0e0e0;
 }
 .crown-icon {
     margin-left: 5px; /* Adjust the spacing as needed */
