--- a/mseg-carpool/mseg-carpool.client/src/views/Rides/Rides.css
+++ b/mseg-carpool/mseg-carpool.client/src/views/Rides/Rides.css
@@ -104,3 +104,28 @@ th {
     border: none;
     cursor: pointer;
 }
+.loading-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Adjust this to fit your needs */
+}
+
+.spinner {
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 50px; /* Adjust size */
+    height: 50px; /* Adjust size */
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
