--- a/mseg-carpool/mseg-carpool.client/src/views/Dashboard/Dashboard.css
+++ b/mseg-carpool/mseg-carpool.client/src/views/Dashboard/Dashboard.css
@@ -44,3 +44,18 @@
     .user-info .ms-TextField-field {
         padding: 10px;
     }
+
+.button-search {
+    background-color: #007bff;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24),0 8px 20px 0 rgba(0,0,0,0.19);
+}
+
+    .button-search:hover {
+        background-color: #0056b3;
+        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24),0 8px 20px 0 rgba(0,0,0,0.19);
+    }
